[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/TitleScene/logo.png" type="Texture" id=1]
[ext_resource path="res://Assets/TitleScene/Title_Scene.gd" type="Script" id=2]
[ext_resource path="res://Assets/UI/defaultTheme.tres" type="Theme" id=3]

[sub_resource type="Theme" id=2]

[node name="Title_Scene" type="Node2D"]
script = ExtResource( 2 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -1.0
margin_right = 225.0
margin_bottom = 170.0
color = Color( 0, 0, 0, 1 )

[node name="Control" type="Control" parent="."]
margin_left = 13.0
margin_right = 214.0
margin_bottom = 170.0

[node name="Label" type="Label" parent="Control"]
margin_left = 30.0
margin_top = 2.0
margin_right = 99.0
margin_bottom = 27.0
rect_scale = Vector2( 2, 2 )
theme = SubResource( 2 )
text = "Legend of Godot"
align = 1
valign = 1

[node name="Button" type="Button" parent="."]
margin_left = 89.0
margin_top = 104.0
margin_right = 137.0
margin_bottom = 120.0
theme = ExtResource( 3 )
text = "Start Game"

[node name="Options" type="Button" parent="."]
margin_left = 89.0
margin_top = 123.0
margin_right = 137.0
margin_bottom = 139.0
theme = ExtResource( 3 )
text = "Options"

[node name="Load_Game" type="Button" parent="."]
margin_left = 89.0
margin_top = 142.0
margin_right = 137.0
margin_bottom = 158.0
theme = ExtResource( 3 )
text = "Load Game"

[node name="Logo" type="Sprite" parent="."]
position = Vector2( 112, 69 )
scale = Vector2( 0.226829, 0.226829 )
texture = ExtResource( 1 )

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="Load_Game" to="." method="_on_Load_Game_pressed"]
